# pageindex

./: answers.md  index_docs.py  main.py  pyproject.toml  query.json  query.py  query_v2.py  query_v3.py  reponse.txt  requirements.txt  run_pageindex.py
data/: 20240711 - Présentation ILIADE_structure.json  20240711 - Rappel métier - Traitement Arrivée Départ avec AT_structure.json  20240913 - Rappel métier - La Mensualisation v2_structure.json  20250610- Rappel métier - Succession et modification titulaire v4_structure.json  20251106 - Lexique vocabulaire Suez v6_structure.json  20251106 Rappel métier mutation rétroactive v2_structure.json  20251106 Rappel métier écart consommation entre 2 abonnés v5_structure.json  PNATCLI10 Traitement de la demande_structure.json  PNATCLI11 Mensualisation et prélèvement automatique_structure.json  P_NAT_CLI_19 Fermeture Logements vacants indice9_structure.json  Procedure nationale Arrivée Client V8_structure.json  Procédure Départ Client_structure.json  Script Loi Hamon v2_structure.json  index_faiss.npz
pageindex/: config.yaml  page_index.py  page_index_md.py  utils.py
v1/: main.py  rag_pipeline.py  retriever_base.py  retriever_manager.py  vector_retriever.py
